--- a/layouts/pricing/single.html
+++ b/layouts/pricing/single.html
@@ -26,7 +26,22 @@
 
 </head>
 
-
+<style>
+  #devices{
+      color: black;
+      font-size: 20px;
+      font-weight: 500;
+      display: inline-block;
+  }
+  #numbers {
+      font-weight: 600;
+      width: 40px;
+      display: inline-block;
+  }
+  option {
+      font-weight: 600;
+  }
+  </style>
 <body>
 
   <!-- ===============================================-->
