--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -2,14 +2,44 @@
 <section class="bg-200 pt-9 pb-0">
 
     <div class="container">
+
         <div class="row">
-            <div class="col-12 col-lg-4 mb-3"><a href="#"><img class="d-inline-block align-middle"
-                        src="/assets/img/smarterguide.png" alt="" width="30" /><span
-                        class="d-inline-block text-1000 fs-1 ms-2 fw-medium lh-base">Smarter<span
-                            class="fw-bold">Guardians</span></span></a>
-                <p class="my-3"> <span class="fw-medium">Smarter Guardians </span>is a proxy network that has unique
-                    features and
-                    has high security. </p>
+            <div class="col-4">
+                <h5>Smarter Guardians</h5>
+                
+                    <ul  class="nav flex-column">
+                        <li class="nav-item"><a class="nav-link"href="/about/">About US</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/all-features/">Features</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/what-is-a-proxy/">How it Works</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/pricing/">Pricing</a></li>
+                        </ul>
+                
+            </div>
+            <div class="col-4">
+                <h5>Smarter Guardians</h5>
+                <ul  class="nav flex-column">
+                    <li class="nav-item"><a class="nav-link"href="/Support/">Support</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/business/">Business</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{{ .Site.Params.loginLink }}">Signin</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{{ .Site.Params.signupLink }}">Signup</a></li>
+                    </ul>
+                    <p class=" my-3" style="font-size: large;">&copy; 2024 Smarter Guardians
+                  
+                    </p>
+            </div>
+            <div class="col-4 align-middle">
+                <a href="#"><img class="d-inline-block align-middle"
+                    src="/assets/img/smarterguide.png" alt="" width="30" /><span
+                    class="d-inline-block text-1000 fs-1 ms-2 fw-medium lh-base align-middle">Smarter<span
+                        class="fw-bold">Guardians</span></span></a>
+            <p class="my-3 align-middle"> <span class="fw-medium align-middle">Smarter Guardians </span>is a proxy network that has unique
+                features and
+                has high security. </p>
+              
+            </div>
+            </div>
+            <div class="row">
+            <div class="col-12 col-lg-4 mb-3">
                     <ul class="list-unstyled list-inline" style="display: inline; float: right;">
                         <li class="list-inline-item">
                                 <a class="text-decoration-none{{ if eq .RelPermalink "/privacy/" }} active{{ end }}"
@@ -41,9 +71,7 @@
                             </svg></a></li>
                 </ul>
                
-                <p class="text-400 my-3">&copy; 2024 Smarter Guardians
-                  
-                </p>
+                
                
                
              
