--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -4,7 +4,7 @@
     <div class="container">
 
         <div class="row">
-            <div class="col-4">
+            <div class="col-md-4">
                 <h5>Smarter Guardians</h5>
             <style>
             #blackcolor{
@@ -18,7 +18,7 @@
                         </ul>
                 
             </div>
-            <div class="col-4">
+            <div class="col-md-4">
                 <h5>Smarter Guardians</h5>
                 <ul  class="nav flex-column">
                     <li class="nav-item"><a  id="blackcolor" class="nav-link"href="/Support/">Support</a></li>
@@ -30,7 +30,7 @@
                   
                     </p>
             </div>
-            <div class="col-4 align-middle">
+            <div class="col-md-4 align-middle">
                 <a href="#"><img class="d-inline-block align-middle"
                     src="/assets/img/smarterguide.png" alt="" width="30" /><span
                     class="d-inline-block text-1000 fs-1 ms-2 fw-medium lh-base align-middle">Smarter<span
@@ -42,14 +42,9 @@
             </div>
             </div>
             <div class="row">
-            <div class="col-12 col-lg-4 mb-3">
-                    <ul class="list-unstyled list-inline" style="display: inline; float: right;">
-                        <li class="list-inline-item">
-                                <a id="blackcolor" class="text-decoration-none{{ if eq .RelPermalink "/privacy/" }} active{{ end }}"
-                                href="/privacy">Privacy Policy</a></li>
-                                <a id="blackcolor" class="text-decoration-none{{ if eq .RelPermalink "/terms-and-conditions/" }} active{{ end }}"
-                                href="/terms-and-conditions">Terms&Conditions</a></li>
-                                </ul>
+           
+                                <div class="col-md-2  mb-3">
+
                 <ul class="list-unstyled list-inline">
                     <li class="list-inline-item"><a class="text-decoration-none" href="#!">
                             <svg class="bi bi-facebook" xmlns="http://www.w3.org/2000/svg" width="16" height="16"
@@ -80,6 +75,15 @@
              
                
             </div>
+            <div class="col-md-4  mb-3 ">
+                <ul class="list-unstyled list-inline " style="display: inline; ">
+                    <li class="list-inline-item">
+                            <a id="blackcolor" class="text-decoration-none{{ if eq .RelPermalink "/privacy/" }} active{{ end }}"
+                            href="/privacy">Privacy Policy</a></li>
+                            <a id="blackcolor" class="text-decoration-none{{ if eq .RelPermalink "/terms-and-conditions/" }} active{{ end }}"
+                            href="/terms-and-conditions">Terms&Conditions</a></li>
+                            </ul>
+                            </div>
         </div>
     </div>
     <!-- end of .container-->
